@@ -1,8 +1,13 @@
 2006-12-01  Matti Aarnio  <mea@zmailer.org>
 
+	* transports/smtp/smtp.h, transports/smtp/smtp.c,
+	  transports/smtp/smtptls.c:
+	    Changed this last big user of select()  to use  zmpoll()
+	    API instead.
+
 	* include/hostenv.h, include/libz.h, include/mailer.h
 	    Ugly static defines to prevent Solaris 10 from including
-	    <sys/stream.h> in lowish level API calls network stuff.
+	    <sys/stream.h> in lowish level API calls of network stuff.
 
 	* router/daemonsub.c, scheduler/mq2.c, scheduler/transport.c,
 	  smtpserver/smtpserver.c, smtpserver/subdaemon-ctf.c,
